--- a/_config.yml
+++ b/_config.yml
@@ -305,7 +305,7 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Yang]
+  last_name: [Yang, Yang*]
   first_name: [Rui, Rui*]
 
   style: apa
@@ -326,7 +326,7 @@ scholar:
   details_link: Details
 
   query: "@*"
-  group_by: year
+  group_by:
   group_order: descending
 
 # Display different badges withs stats for your publications
@@ -365,7 +365,7 @@ filtered_bibtex_keywords:
   ]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
-max_author_limit: 3 # leave blank to always show all authors
+max_author_limit: 20 # leave blank to always show all authors
 more_authors_animation_delay: 10 # more authors are revealed on click using animation; smaller delay means faster animation
 
 # Enables publication thumbnails. If disabled, none of the publications will display thumbnails, even if specified in the bib entry.
