--- a/_config.yml
+++ b/_config.yml
@@ -326,7 +326,7 @@ scholar:
   details_link: Details
 
   query: "@*"
-  group_by: year
+  group_by: none
   group_order: descending
 
 # Display different badges withs stats for your publications
